--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    // Image Circle View
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
 }
