--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
-    implementation 'org.whispersystems:signal-service-android:2.13.7'
+    implementation 'org.whispersystems:curve25519-android:0.5.0'
 
-    implementation 'org.whispersystems:webrtc-android:M77'
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     // Image Circle View
