messages now populate from bottom to top

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".DisplayMessageActivity"
-            android:parentActivityName=".MessageActivity">
+        <activity
+            android:name=".DisplayMessageActivity"
+            android:parentActivityName=".MessageActivity"
+            android:windowSoftInputMode="adjustResize">
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
