--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.hushed">
 
     <application
+        android:name="com.example.hushed.HushedApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_hushed_round"
         android:label="@string/app_name"
