Renaming of files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".DisplayMessageActivity"
+            android:name=".SelectedConversationActivity"
             android:screenOrientation="portrait"
             android:parentActivityName=".MessageActivity"
             android:windowSoftInputMode="adjustResize">
