--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,34 +14,34 @@
         <activity
             android:name=".SelectedConversationActivity"
             android:screenOrientation="portrait"
-            android:parentActivityName=".MessageActivity"
+            android:parentActivityName=".ConversationsActivity"
             android:windowSoftInputMode="adjustResize">
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MessageActivity" />
+                android:value=".ConversationsActivity" />
         </activity>
         <activity
-            android:name=".MessageActivity"
+            android:name=".ConversationsActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MessageActivity" />
+                android:value=".ConversationsActivity" />
         </activity>
         <activity
             android:name=".NicknameActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MessageActivity" />
+                android:value=".ConversationsActivity" />
         </activity>
 
         <activity android:name=".ContactsActivity"
-            android:parentActivityName=".MessageActivity"
+            android:parentActivityName=".ConversationsActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MessageActivity"/>
+                android:value=".ConversationsActivity"/>
         </activity>
 
         <activity
